# biodivine-algo-smt-inference

./: .gitignore  Cargo.toml  README.md
.cargo/: config.macos-default.toml
.github/workflows/: build.yml
data/: readme.md
data/arabidopsis/: arabidopsis-psbn-no-updates.aeon
data/myeloid/: dataset-fps-adjusted-SAT.csv  fp-analysis-fully-specified.txt  myeloid-fully-specified.aeon  myeloid-psbn-no-updates.aeon
data/neural_differentiation/: celltypes_terminal.txt  observed_genes.txt  omnipath_full.aeon  omnipath_largest_scc.aeon  omnipath_largest_scc_genes.txt  preprocess_data.py  table_full_confidence.tsv  table_full_confidence_filtered.tsv  table_full_observations.tsv  table_full_observations_filtered.tsv  table_scc_confidence.tsv  table_scc_observations.tsv
data/toy_models/: 4v-activ-fully-spec.aeon  4v-activ-psbn.aeon  4v-activ-specification.csv  4v-dense-fully-spec.aeon  4v-dense-psbn.aeon  4v-dense-specification.csv  5v-fully-spec.aeon  5v-psbn.aeon  5v-specification.csv
scripts/: check_fixed_points.py  naive_fps_inference.py  readme.md
src/: exists_state.rs  expression_generators.rs  lib.rs  naive_inference.rs  observations.rs  smt_state.rs  state_specification.rs
src/tests/: inference_fully_specified.rs  inference_naive.rs  inference_simple_partially_specified.rs  inference_toy_models.rs  mod.rs
